# secagent

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  ROADMAP.md  config.template.yaml  install.sh  pyproject.toml
secagent/: __init__.py  __main__.py  agent.py  cache.py  cli.py  compare.py  config.py  eval.py  learning.py  mcp_manager.py  monitor.py  notify.py  prompt_builder.py  result_parser.py  server.py  web_fetch.py
secagent/parsers/: __init__.py  ctia.py  fdp.py  generic.py
secagent/skills/bulk-registration-detection/: SKILL.md
secagent/skills/cve-vulnerability-analysis/: SKILL.md
secagent/skills/domain-security-analysis/: SKILL.md
secagent/skills/ip-security-analysis/: SKILL.md
secagent/skills/sample-hash-analysis/: SKILL.md
secagent/skills/threat-intel-correlation/: SKILL.md
secagent/skills/tool-output-reference/: SKILL.md
secagent/skills/unknown-threat-detection/: SKILL.md
tests/: conftest.py  test_agent.py  test_cache.py  test_cli.py  test_compare.py  test_config.py  test_context_pruning.py  test_eval.py  test_learning.py  test_mcp_manager.py  test_monitor.py  test_parsers.py  test_prompt_builder.py  test_result_parser.py  test_web_fetch.py
tests/eval/: dataset.yaml
