[project]
name = "secagent"
version = "0.3.1"
description = "CLI 安全分析 Agent - 域名/IP 安全风险判断"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "secagent" }]
readme = "README.md"
dependencies = [
    "openai>=2.0",
    "mcp>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
secagent = "secagent.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
secagent = ["skills/*/SKILL.md"]
